--- a/Resources/iphone/html/bmi.html
+++ b/Resources/iphone/html/bmi.html
@@ -1,52 +1,48 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=2.0, user-scalable=no" />
+	<script type="text/javascript" src="js/canvasjs.js"></script>
+ <script type="text/javascript" src="js/jquery.min.js"></script>
+	<script>
+            // Ti.App.addEventListener("app:fromTitanium", function(e) {
+                // alert(e.message);
+            // });
+            Ti.App.addEventListener("app:bmiInfo",function(e) {
+              
+               loadChart(e.message);
+            });
+        </script>
+        
 <script type="text/javascript">
- // $(function() { 
-  	Ti.App.addEventListener("bmiInfo",extractInfo);
-  	Ti.App.addEventListener("test",function(e){
-  		alert("hello");
-  	});
-  //});
-
-function extractInfo(e){
-	 alert("hihi");
-	console.log(e.info);
-	console.log("YES");
-	 
-}
-window.onload = function () {
-	// Ti.App.addEventListener("bmiInfo",function(e){
-		// console.log(e.info);
-		// console.log("YES");
-	// });
+ 
+function loadChart(data){
+	//Ti.API.info(data);
 	var chart = new CanvasJS.Chart("chartContainer", {
 		theme: "theme2",//theme1
 		title:{
 			text: "BMI"              
 		},
+		backgroundColor : "#FFE2E2",
 		animationEnabled: true,   // change to true
 		data: [              
 		{
 			// Change type to "bar", "splineArea", "area", "spline", "pie",etc.
 			type: "splineArea",
-			dataPoints: [
-				{ label: "apple",  y: 10  },
-				{ label: "orange", y: 15  },
-				{ label: "banana", y: 25  },
-				{ label: "mango",  y: 30  },
-				{ label: "grape",  y: 28  }
-			]
+			dataPoints: data
 		}
 		]
 	});
 	chart.render();
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
+}
+window.onload = function () {
+	loadChart();
+	
 };
 </script>
- <script type="text/javascript" src="js/canvasjs.min.js"></script>
- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ 
 </head>
 <body>
 <div id="chartContainer" style="height: 200px; width: 100%;"></div>
