--- a/Resources/iphone/html/heartRate.html
+++ b/Resources/iphone/html/heartRate.html
@@ -9,6 +9,7 @@ window.onload = function () {
 		title:{
 			text: "Heart Rate"              
 		},
+		backgroundColor : "#FFE2E2",
 		animationEnabled: true,   // change to true
 		data: [              
 		{
