--- a/app/assets/html/bodyTemperature.html
+++ b/app/assets/html/bodyTemperature.html
@@ -9,6 +9,7 @@ window.onload = function () {
 		title:{
 			text: "Body Temperature"              
 		},
+		backgroundColor : "#EBEBEB",
 		animationEnabled: true,   // change to true
 		data: [              
 		{
