--- a/Resources/iphone/html/bmi.html
+++ b/Resources/iphone/html/bmi.html
@@ -19,11 +19,11 @@
 function loadChart(data){
 	//Ti.API.info(data);
 	var chart = new CanvasJS.Chart("chartContainer", {
-		theme: "theme2",//theme1
+		theme: "theme1",//theme1
 		title:{
 			text: "BMI"              
 		},
-		backgroundColor : "#FFE2E2",
+		backgroundColor : "#EBEBEB",
 		animationEnabled: true,   // change to true
 		data: [              
 		{
