--- a/app/assets/html/bloodPressure.html
+++ b/app/assets/html/bloodPressure.html
@@ -14,7 +14,7 @@ window.onload = function () {
 		data: [              
 		{
 			// Change type to "bar", "splineArea", "area", "spline", "pie",etc.
-			type: "column",
+			type: "splineArea",
 			dataPoints: [
 				{ label: "apple",  y: 10  },
 				{ label: "orange", y: 15  },
