updated My Health Data

--- a/Resources/iphone/html/bodyTemperature.html
+++ b/Resources/iphone/html/bodyTemperature.html
@@ -32,7 +32,7 @@ function loadChart(data){
 	var chart = new CanvasJS.Chart("chartContainer", {
 		theme: "theme1",//theme1
 		title:{
-			text: "Blood Pressure"              
+			text: "Body Temperature"              
 		},
 		backgroundColor : "#EBEBEB",
 		animationEnabled: true,   // change to true
