--- a/Resources/iphone/html/weight.html
+++ b/Resources/iphone/html/weight.html
@@ -12,8 +12,9 @@
  		p {
  			font-size:18px; 
  			font-weight:bold; 
- 			text-align:center;
- 			color: #787878;
+ 			text-align:left;
+ 			padding-left:13px;
+ 			color: #000;
  		}
  	</style>
 	<script>
@@ -36,7 +37,7 @@ function loadChart(data){
 		title:{
 			text: "Weight(KG)"              
 		},
-		backgroundColor : "#EBEBEB",
+		backgroundColor : "#FFFFFF",
 		animationEnabled: true,   // change to true
 		data: [              
 		{
