--- a/app/assets/html/bloodPressure.html
+++ b/app/assets/html/bloodPressure.html
@@ -12,8 +12,9 @@
  		p {
  			font-size:18px; 
  			font-weight:bold; 
- 			text-align:center;
- 			color: #787878;
+ 			text-align:left;
+ 			padding-left:10px;
+ 			color: #000;
  		}
  	</style>
 	<script>
@@ -37,7 +38,7 @@ function loadChart(data,data2){
 		title:{
 			text: "Blood Pressure"              
 		},
-		backgroundColor : "#EBEBEB",
+		backgroundColor : "#FFFFFF",
 		animationEnabled: true,   // change to true
 		legend :{
 			fontSize: 12,
