--- a/Resources/iphone/html/bloodPressure.html
+++ b/Resources/iphone/html/bloodPressure.html
@@ -13,7 +13,7 @@
  			font-size:18px; 
  			font-weight:bold; 
  			text-align:left;
- 			padding-left:13px;
+ 			padding-left:10px;
  			color: #000;
  		}
  	</style>
@@ -27,6 +27,7 @@
               }
                
             });
+            Ti.App.fireEvent('populateDataById',{ id: 2});
         </script>
         
 <script type="text/javascript">
