--- a/app/assets/html/bloodPressure.html
+++ b/app/assets/html/bloodPressure.html
@@ -27,6 +27,7 @@
               }
                
             });
+            Ti.App.fireEvent('populateDataById',{ id: 2});
         </script>
         
 <script type="text/javascript">
