--- a/app/assets/html/heartRate.html
+++ b/app/assets/html/heartRate.html
@@ -27,6 +27,7 @@
               }
                
             });
+             Ti.App.fireEvent('populateDataById',{ id: 3});
         </script>
         
 <script type="text/javascript">
