--- a/app/assets/html/height.html
+++ b/app/assets/html/height.html
@@ -26,6 +26,7 @@
               	loadNoData(e.dataPeriod);
               }
             });
+             Ti.App.fireEvent('populateDataById',{ id: 5});
         </script>
         
 <script type="text/javascript">
