--- a/Resources/android/html/bloodPressure.html
+++ b/Resources/android/html/bloodPressure.html
@@ -12,7 +12,8 @@
  		p {
  			font-size:18px; 
  			font-weight:bold; 
- 			text-align:center;
+ 			text-align:left;
+ 			padding-left:10px;
  			color: #000;
  		}
  	</style>
@@ -26,6 +27,7 @@
               }
                
             });
+            Ti.App.fireEvent('populateDataById',{ id: 2});
         </script>
         
 <script type="text/javascript">
@@ -37,7 +39,7 @@ function loadChart(data,data2){
 		title:{
 			text: "Blood Pressure"              
 		},
-		backgroundColor : "#EBEBEB",
+		backgroundColor : "#FFFFFF",
 		animationEnabled: true,   // change to true
 		legend :{
 			fontSize: 12,
