--- a/Resources/android/html/steps.html
+++ b/Resources/android/html/steps.html
@@ -12,7 +12,8 @@
  		p {
  			font-size:18px; 
  			font-weight:bold; 
- 			text-align:center;
+ 			text-align:left;
+ 			padding-left:10px;
  			color: #000;
  		}
  	</style>
@@ -25,6 +26,7 @@
               	loadNoData(e.dataPeriod);
               }
             });
+            Ti.App.fireEvent('populateDataById',{ id: 10});
         </script>
         
 <script type="text/javascript">
