--- a/Resources/iphone/html/bmi.html
+++ b/Resources/iphone/html/bmi.html
@@ -13,7 +13,7 @@
  			font-size:18px; 
  			font-weight:bold; 
  			text-align:left;
- 			padding-left:13px;
+ 			padding-left:10px;
  			color: #000;
  		}
  	</style>
@@ -24,8 +24,8 @@
           }else{
           	loadNoData(e.dataPeriod);
           }
-          
         });
+        Ti.App.fireEvent('populateDataById',{ id: 1});
     </script>
         
 <script type="text/javascript">
