--- a/Resources/iphone/html/steps.html
+++ b/Resources/iphone/html/steps.html
@@ -49,6 +49,7 @@ function loadChart(data){
 		]
 	});
 	chart.render();
+	Ti.App.fireEvent('graphLoaded',{ id: 10});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
