--- a/Resources/android/html/bmi.html
+++ b/Resources/android/html/bmi.html
@@ -24,6 +24,13 @@
           }else{
           	loadNoData(e.dataPeriod);
           }
+          var height= (
+		    'innerHeight' in window? window.innerHeight :
+		    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
+		    document.body.clientHeight
+		);
+		setTimeout(function(){ Ti.App.fireEvent('graphLoaded', { id: 1, contentheight: height}); }, 2000);
+          
         });
         Ti.App.fireEvent('populateDataById',{ id: 1});
     </script>
