--- a/Resources/iphone/html/bodyTemperature.html
+++ b/Resources/iphone/html/bodyTemperature.html
@@ -25,7 +25,12 @@
               }else{
               	loadNoData(e.dataPeriod);
               }
-               
+               var height= (
+		    'innerHeight' in window? window.innerHeight :
+		    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
+		    document.body.clientHeight
+		);
+          Ti.App.fireEvent('graphLoaded', { id: 4, contentheight: height});
             });
              Ti.App.fireEvent('populateDataById',{ id: 4});
         </script>
@@ -50,7 +55,6 @@ function loadChart(data){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 4});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
