--- a/Resources/iphone/html/cholestrol.html
+++ b/Resources/iphone/html/cholestrol.html
@@ -25,7 +25,12 @@
               }else{
               	loadNoData(e.dataPeriod);
               }
-               
+               var height= (
+		    'innerHeight' in window? window.innerHeight :
+		    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
+		    document.body.clientHeight
+		);
+           Ti.App.fireEvent('graphLoaded', { id: 7, contentheight: height});
             });
             Ti.App.fireEvent('populateDataById',{ id: 7});
         </script>
@@ -65,7 +70,6 @@ function loadChart(data,data2){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 7});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
