--- a/app/assets/html/cholestrol.html
+++ b/app/assets/html/cholestrol.html
@@ -30,7 +30,7 @@
 		    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
 		    document.body.clientHeight
 		);
-          setTimeout(function(){ Ti.App.fireEvent('graphLoaded', { id: 7, contentheight: height}); }, 1000);
+           Ti.App.fireEvent('graphLoaded', { id: 7, contentheight: height});
             });
             Ti.App.fireEvent('populateDataById',{ id: 7});
         </script>
@@ -70,7 +70,6 @@ function loadChart(data,data2){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 7});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
