--- a/app/assets/html/steps.html
+++ b/app/assets/html/steps.html
@@ -25,6 +25,12 @@
               }else{
               	loadNoData(e.dataPeriod);
               }
+            var height= (
+			    'innerHeight' in window? window.innerHeight :
+			    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
+			    document.body.clientHeight
+			);
+          Ti.App.fireEvent('graphLoaded', { id: 10, contentheight: height});
             });
             Ti.App.fireEvent('populateDataById',{ id: 10});
         </script>
@@ -49,7 +55,6 @@ function loadChart(data){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 10});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
