--- a/Resources/android/html/bloodPressure.html
+++ b/Resources/android/html/bloodPressure.html
@@ -30,7 +30,7 @@
 			    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
 			    document.body.clientHeight
 			);
-         setTimeout(function(){ Ti.App.fireEvent('graphLoaded', { id: 2, contentheight: height}); }, 1000);
+         Ti.App.fireEvent('graphLoaded', { id: 2, contentheight: height});
         });
             Ti.App.fireEvent('populateDataById',{ id: 2});
         </script>
@@ -70,7 +70,6 @@ function loadChart(data,data2){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 2});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
