--- a/Resources/android/html/bodyTemperature.html
+++ b/Resources/android/html/bodyTemperature.html
@@ -30,7 +30,7 @@
 		    document.compatMode!=='BackCompat'? document.documentElement.clientHeight :
 		    document.body.clientHeight
 		);
-          setTimeout(function(){ Ti.App.fireEvent('graphLoaded', { id: 4, contentheight: height}); }, 1000);
+          Ti.App.fireEvent('graphLoaded', { id: 4, contentheight: height});
             });
              Ti.App.fireEvent('populateDataById',{ id: 4});
         </script>
@@ -55,7 +55,6 @@ function loadChart(data){
 		]
 	});
 	chart.render();
-	Ti.App.fireEvent('graphLoaded',{ id: 4});
 	//document.getElementsByClassName("canvasjs-chart-credit").style.display = 'none';
 	$(".canvasjs-chart-credit").hide();
 }
