1. New layout and user experience for My Health. 2. improve user experience for the chat room. 3. New user experience for My Medical Record, you can view your clinic visitation here now. 4. Clinic locator bug fixed.

--- a/app/assets/html/bmi.html
+++ b/app/assets/html/bmi.html
@@ -20,8 +20,8 @@
 <script type="text/javascript">
  
 function loadChart(data){
-	//Ti.API.info(data);
-	alert("loadChart");
+	Ti.API.info(data);
+	console.log(data);
 	var chart = new CanvasJS.Chart("chartContainer", {
 		theme: "theme1",//theme1
 		title:{
