--- a/app/assets/html/socket.html
+++ b/app/assets/html/socket.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
   <head>
     <title>Socket.IO chat</title>
@@ -21,10 +20,11 @@
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-	var socket = io("http://103.3.173.207:3500");
+    Ti.API.info('body loaded!');
+	var socket = io("http://103.3.173.207:3501");
 	var room_id = 0;
-	socket.on('connect', function () {
-		Ti.App.fireEvent("id connected "+socket.id);
+	socket.on('socket:connect', function () {
+		Ti.App.fireEvent("getUserInfo");
 	});
 	
 	socket.on("socket:getDoctorList", function(param){
@@ -51,7 +51,10 @@ Ti.App.addEventListener("socket:add_event", function(ex) {
 		Ti.App.fireEvent("wow!"+ex.name+" called");
 		Ti.App.fireEvent(ex.name, param);
 	});
-});*/      
+});   */
+    Ti.App.addEventListener("socket:updateUserInfo", function(e){
+        socket.emit('socket:updateUserInfo', e);
+    });   
 	Ti.App.addEventListener("socket:getDoctorList", function(){
   	  	socket.emit('socket:getDoctorList', socket.id);
   	  	Ti.App.fireEvent("socket:getDoctorList room id");
