--- a/app/assets/html/index.html
+++ b/app/assets/html/index.html
@@ -18,7 +18,7 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
   	  Ti.App.addEventListener("web:setRoom", function(e){
